Added code in Home as opening

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,23 @@
-.App {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
+}
+
+.nav-item {
+    text-decoration: none;
+    color: black;
+}
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +54,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
