--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,17 @@
     padding: 0;
 }
 
-li {
-    list-style: none;
+.navbar-collapse {
+    justify-content: flex-end;
 }
 
-.nav-item {
-    text-decoration: none;
-    color: black;
+.navbar-brand {
+    margin-left: 30px;
 }
 
+.nav-link:last-child {
+    margin-right: 30px;
+}
 
 
 
