Updated the Home

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,5 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 img {
     width: 400px;
     height: 600px;
     background-color: antiquewhite;
 }
+
+
+
