--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,22 @@
 }
 
 .navbar-brand {
-    margin-left: 30px;
+    margin-left: 0.5rem;
 }
 
 .nav-link:last-child {
-    margin-right: 30px;
+    margin-right: 0.5rem;
+}
+
+footer {
+    background-color: rgb(252, 252, 252);
+}
+
+p {
+    margin: 0;
+    margin-left: 0.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 
