--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -3,13 +3,6 @@
     padding: 0;
 }
 
-img {
-    width: 400px;
-    height: 600px;
-    background-color: antiquewhite;
-    object-fit: cover;
-}
-
 main {
     display: flex;
     justify-content: space-evenly;
@@ -19,8 +12,35 @@ main {
 
 section:first-child {
     flex: 1;
-    text-align: center;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.paint {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: -1;
+    /* background-repeat: none;
+    -webkit-mask-image: url('../images/mask.png');
+    mask-image: url('../images/mask.png');
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 95%;
+    mask-size: 95%;
+    -webkit-mask-position: 50px 0px;
+    mask-position: 50px 0px; */
+}
+
+.me {
+    width: 400px;
+    height: 600px;
+    object-fit: cover;
 }
 
 section:last-child {
@@ -33,4 +53,25 @@ section:last-child {
 
 section > p {
     text-wrap: wrap;
+    margin-left: 0;
+}
+
+.icons {
+    padding-left: 0; 
+    padding-right: 0;
+}
+
+li {
+    list-style: none;
+    display: inline;
+}
+
+i {
+    font-size: 24px;
+    margin: 1rem;
+    color: black;
+}
+
+i:first-child {
+    margin-left: 0;
 }
