Updated the layout of Home

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -3,49 +3,76 @@
     padding: 0;
 }
 
-main {
+.me {
+    width: 386px;
+    height: 600px;
+}
+
+@media screen and (max-width: 500px) {
+    .me {
+        width: calc(386px / 1.2);
+        height: calc(600px / 1.2);
+    }
+}
+
+.img-container {
+    flex: 1;
+}
+
+.desc-container {
+    flex: 1;
+}
+
+h1, h2 {
+    text-wrap: nowrap;
+}
+
+p {
+    text-align: justify;
+    margin: 0;
+}
+
+.container-fluid {
+    padding-left: 0;
+}
+
+li {
+    list-style: none;
+}
+
+i {
+    font-size: 24px;
+    color: black;
+}
+
+
+/* main {
+    height: 88.2vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     background-color: #1f2020;
     color: white;
-} 
+}  */
 
-section:first-child {
+/* section:first-child {
+    flex: 1;
+} */
+
+/* .img-container {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-}
+} */
 
-.paint {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    z-index: -1;
-    /* background-repeat: none;
-    -webkit-mask-image: url('../images/mask.png');
-    mask-image: url('../images/mask.png');
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-size: 95%;
-    mask-size: 95%;
-    -webkit-mask-position: 50px 0px;
-    mask-position: 50px 0px; */
-}
+/* .me {
+    width: 30px;
+    height: 60px;
+} */
 
-.me {
-    width: 400px;
-    height: 600px;
-    object-fit: cover;
-}
-
-section:last-child {
+/* section:last-child {
     flex: 1;
     text-align: justify;
     text-wrap: nowrap;
@@ -76,4 +103,24 @@ i {
 
 i:first-child {
     margin-left: 0;
-}
+} */
+
+
+/* .paint {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: -1;
+    background-repeat: none;
+    -webkit-mask-image: url('../images/mask.png');
+    mask-image: url('../images/mask.png');
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 95%;
+    mask-size: 95%;
+    -webkit-mask-position: 50px 0px;
+    mask-position: 50px 0px;
+} */
