Created navigation for certificates

--- a/src/assets/styles/Certificates.css
+++ b/src/assets/styles/Certificates.css
@@ -18,7 +18,8 @@ label {
     padding: 30px;
     padding-bottom: 0;
     text-align: center;
-    text-wrap: nowrap;
+    text-wrap: wrap;
+    color: white;
 }
 
 input[type='radio']:checked + label {
@@ -31,20 +32,22 @@ input[type='radio']:hover + label {
     opacity: 1;
 }
 
-img {
-    /* cursor: pointer; */
+swiper-container {
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
+swiper-slide {
+    text-align: center;
+}
+
+swiper-slide img {
     width: 270px;
     height: 480px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
-swipe-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-swipe-slider {
-    width: 100% ;
-    height: 100%;
+:root {
+    --swiper-pagination-bullet-size: 15px;
 }
