Configured navigation to be fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .navbar {
+    position: fixed;
     background-color: skyblue; /* #1f2020 */
-    
+    z-index: 9999;
 }
 
 .navbar-collapse {
