--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .me {
     width: 386px;
     height: 600px;
@@ -23,24 +18,11 @@
     flex: 1;
 }
 
-h1, h2 {
-    text-wrap: nowrap;
-}
-
-p {
-    text-align: justify;
-    margin: 0;
-}
-
 .container-fluid {
     padding-left: 0;
 }
 
-li {
-    list-style: none;
-}
-
-i {
+.bi {
     font-size: 24px;
     color: white;
 }
