--- a/src/assets/styles/About.css
+++ b/src/assets/styles/About.css
@@ -1,20 +1,9 @@
 
-body {
+/* body {
     overflow-y: hidden;
-}
+} */
 
-.par-container {
+/* .par-container {
     width: 100%;
     height: 100%;
-}
-
-
-img {
-    object-fit: fill
-}
-
-.parallax {
-    scrollbar-width: 0;
-    overflow-y: hidden;
-}
-
+} */
