Changed the link in header

--- a/src/assets/styles/parts/Header.module.css
+++ b/src/assets/styles/parts/Header.module.css
@@ -9,6 +9,14 @@
     color: white;
 }
 
+.navbarBrand:visited {
+    color: white;
+}
+
+.navbarBrand:hover {
+    color: black;
+}
+
 .navbarToggler {
     color: transparent;
     border: none;
