--- a/src/assets/styles/parts/Header.module.css
+++ b/src/assets/styles/parts/Header.module.css
@@ -1,7 +1,9 @@
 .navbar {
     position: fixed;
-    background-color: skyblue; /* #1f2020 */
-    z-index: 9999;
+    background-color: rgba(30, 30, 30, 0.4); /* #1f2020 */
+    backdrop-filter: blur(3px);
+    /* z-index: -1 */
+    
 }
 
 .navbarBrand {
