--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,12 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: rgb(30, 30, 30);
 }
 
 main {
-    background-color: rgb(30, 30, 30)
+    margin: 10%;
+    margin-top: 0;
 }
 
 h1, h2, p {
