--- a/src/assets/styles/parts/Header.module.css
+++ b/src/assets/styles/parts/Header.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     background-color: rgba(30, 30, 30, 0.4); /* #1f2020 */
     backdrop-filter: blur(3px);
-    /* z-index: -1 */
+    z-index: 9999;
     
 }
 
