--- a/src/assets/styles/About.module.css
+++ b/src/assets/styles/About.module.css
@@ -1,3 +1,13 @@
-.space {
-    height: 56px;
+.secContainer {
+    width: 100%;
+    height: 100%;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 10%;
+    margin-right: 10%;
 }
