changed hover color of brand and links

--- a/src/assets/styles/parts/Header.module.css
+++ b/src/assets/styles/parts/Header.module.css
@@ -16,7 +16,8 @@
 }
 
 .navbarBrand:hover {
-    color: black;
+    /* color: black; */
+    color: rgb(150, 150, 150, 1);
 }
 
 .navbarToggler {
@@ -54,7 +55,8 @@
 }
 
 .navLink:hover {
-    color: black;
+    /* color: black; */
+    color: rgb(150, 150, 150, 1);
 }
 
 .navLink:last-child {
