changed margin size on containers

--- a/src/assets/styles/Home.module.css
+++ b/src/assets/styles/Home.module.css
@@ -39,10 +39,12 @@
 
 .imgContainer {
     flex: 1;
+    margin-left: 100px;
 }
 
 .descContainer {
     flex: 1;
+    margin-right: 100px;
 }
 
 .ulContainer {
