--- a/src/assets/styles/parts/Header.module.css
+++ b/src/assets/styles/parts/Header.module.css
@@ -54,10 +54,6 @@
     color: white;
 }
 
-.navLink:visited {
-    color: white;
-}
-
 .navLink:hover {
     /* color: black; */
     color: rgb(150, 150, 150, 1);
@@ -65,6 +61,10 @@
 
 .navLink:last-child {
     margin-right: 0.5rem;
+}
+
+.activeLink {
+    color: skyblue !important;
 }
 
 .p {
