--- a/src/assets/styles/Projects.module.css
+++ b/src/assets/styles/Projects.module.css
@@ -9,7 +9,7 @@
     text-wrap: nowrap;
     color: rgb(30, 30, 30, 1);
     margin: 0;
-    font-size: 8rem;
+    font-size: 6rem;
 }
 
 .p {
@@ -51,8 +51,15 @@
     align-items: center;
 }
 
+.missionSwiper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .projectSwiper img {
     width: 100%;
     height: 500px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 10px;
 }
