--- a/src/assets/styles/Projects.module.css
+++ b/src/assets/styles/Projects.module.css
@@ -1,20 +1,20 @@
 .h1, .h2, .h3 {
     text-wrap: nowrap;
     color: skyblue;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .h1p {
     text-align: center;
     text-wrap: nowrap;
     color: rgb(30, 30, 30, 1);
-    margin: 0;
+    /* margin: 0; */
     font-size: 6rem;
 }
 
 .p {
     text-align: justify;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .mainContainer {
@@ -41,7 +41,8 @@
 .projectSwiper {
     display: flex;
     justify-content: center;
-    margin: 100px;
+    margin: 500px;
+    margin-top: 100px;
 }
 
 .swiperSlide {
@@ -59,7 +60,17 @@
 
 .projectSwiper img {
     width: 100%;
-    height: 500px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+
+.imgDummy {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper1 {
+    width: 850px;
+    height: 500px;
 }
