--- a/src/assets/styles/Projects.module.css
+++ b/src/assets/styles/Projects.module.css
@@ -65,12 +65,17 @@
     border-radius: 10px;
 }
 
-.imgDummy {
+.imgProj {
     width: 100%;
     height: 100%;
 }
 
 .swiper1 {
-    width: 850px;
+    width: 700px;
+    height: 500px;
+}
+
+.swiper2 {
+    width: 700px;
     height: 500px;
 }
