--- a/src/assets/styles/Projects.module.css
+++ b/src/assets/styles/Projects.module.css
@@ -112,3 +112,10 @@
     margin: 0;
     border-radius: 10px;
 }
+
+.swiper7 {
+    width: 700px;
+    height: 500px;
+    margin: 0;
+    border-radius: 10px;
+}
